# AIvoifu

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
AIvoifu/: client_pipeline.py
AIvoifu/tts/: tts.py
AIvoifu/tts/tts_base_models/: readme.md
AIvoifu/tts/tts_base_models/khanomtal11/: config.json  config_se.json  language_ids.json  nconfig.json  speech.py
AIvoifu/voice_conversion/: config.json  vc_inference.py
AIvoifu/voice_conversion/RVC/: README.md  config.py  python_inference.py
AIvoifu/voice_conversion/RVC/infer_pack/: models.py  models_onnx.py  modules.py
AIvoifu/voice_conversion/zoo/: readme.md
AIvoifu/voice_conversion/zoo/alice/: meta.json
AIvoifu/voice_conversion/zoo/ayaka-jp/: meta.json
AIvoifu/voice_conversion/zoo/kazuha-jp/: meta.json
AIvoifu/voice_conversion/zoo/xiao-jp/: meta.json
src/AIvoifu/: client_pipeline.py
src/AIvoifu/tts/: tts.py
src/AIvoifu/voice_conversion/: vc_inference.py
src/AIvoifu/voice_conversion/RVC/: config.py  python_inference.py  vc_infer_pipeline.py
src/AIvoifu/voice_conversion/RVC/infer_pack/: modules.py
test/: test_client_pipeline.py
