[tool.poetry]
name = "aivoifu"
version = "0.1.2"
description = "Easy and fast AI Waifu voice generation"
authors = ["HRNPH <hrnph@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "AIvoifu"}]

[tool.poetry.dependencies]
python = "3.10.x"
gtts = "^2.5.0"
librosa = "^0.10.1"
torch = "^2.1.2"
fairseq = "^0.12.2"
wget = "^3.2"
praat-parselmouth = "^0.4.3"
pyworld = "^0.3.4"
faiss-cpu = "^1.7.4"
numpy = "^1.26.3"
setuptools = "^69.0.3"
edge-tts = "^6.1.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
