[tool.poetry]
name = "aivoifu"
version = "0.2.7"
description = "Easy and fast AI Waifu voice generation"
authors = ["HRNPH <hrnph@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "AIvoifu"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gtts = "^2.5.0"
torch = "^2.1.2"
fairseq = "^0.12.2"
wget = "^3.2"
praat-parselmouth = "^0.4.3"
pyworld = "^0.3.4"
faiss-cpu = "^1.7.4"
setuptools = "^69.0.3"
edge-tts = "^6.1.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
transformers = "^4.38.2"
soundfile = "^0.12.1"
optimum = "^1.17.1"
tts = "^0.22.0"
nomkl = "^0.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
